# yahboom-transbot-XSE

./: .gitmodules  README.md
transbot_ws/.catkin_tools/profiles/default/: devel_collisions.txt
transbot_ws/src/transbot_facetracker/: face_follow.py
transbot_ws/src/transbot_laser/launch/: base.launch
transbot_ws/src/transbot_linefollow/cfg/: LineDetectPID.cfg
transbot_ws/src/transbot_linefollow/scripts/: LineFollowHSV.text  follow_common.py  follow_line.py
transbot_ws/src/transbot_mono/scripts/: grab_lib.py  mono_Tracker.py  mono_common.py
transbot_ws/src/transbot_nav/launch/: test_gmapping.launch  transbot_bringup.launch  transbot_bundle.launch
transbot_ws/src/transbot_navigation/: CMakeLists.txt  package.xml
transbot_ws/src/transbot_navigation/launch/: gmapping_demo.launch
transbot_ws/src/transbot_navigation/launch/include/: gmapping.launch  move_base.launch
transbot_ws/src/transbot_navigation/params/: costmap_common_params.yml
transbot_ws/src/transbot_program/scripts/: Mono_Tracker.py  Program_Ctrl.py
transbot_ws/src/transbot_se_description/: CMakeLists.txt  package.xml
transbot_ws/src/transbot_se_description/config/: joint_names_transbot_se_description.yaml
transbot_ws/src/transbot_se_description/launch/: display.launch  gazebo.launch
transbot_ws/src/transbot_se_description/urdf/: transbot_se_description.urdf
transbot_ws/src/transbot_se_moveit_config/scripts/: 03_machine_move.py
transbot_ws/src/transbot_track/scripts/: Tracker.py  Tracker1.py  TrackerHSV.text  track_srv.py
transbot_ws/src/transbot_visual/AR/: simple_AR.py
(+2 files in other folders)
