<?xml version="1.0"?>
<package>
  <name>transbot_navigation</name>

  <version>0.8.9</version>
  <description>transbot navigation</description>
  <license>license</license>
  <maintainer email="noone@gmail.com">noone</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <export>

  </export>
</package>
